# magpie

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  scaffold.config.yml  scaffold.yml
.scaffold/: state.json
magpie/cli/: main.py
magpie/config/: settings.py
magpie/db/: database.py  migrate.py
magpie/db/migrations/: 001_initial.sql  002_api_keys.sql  003_pgvector.sql  004_workspaces.sql  005_users_orgs.sql  006_oauth.sql
magpie/embeddings/: base.py  openai.py
magpie/mcp/: oauth.py  server.py
magpie/search/: fusion.py
magpie/server/: app.py  auth.py
magpie/server/routes/: auth.py  entries.py  health.py  keys.py  oauth.py  orgs.py
tests/: test_oauth.py
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: EntryCard.tsx
web/src/lib/: api.ts
web/src/pages/: BrowsePage.tsx  DashboardPage.tsx  EntryPage.tsx  LoginPage.tsx  NewEntryPage.tsx  OnboardingPage.tsx  SearchPage.tsx  SettingsPage.tsx
