[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "magpie-ai"
dynamic = ["version"]
description = "Knowledge store with semantic + keyword search. Dual search, REST + MCP API, management UI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29,<1",
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "mcp>=1.0,<2",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "rich>=13,<14",
    "typer>=0.12,<1",
    "uvicorn>=0.30,<1",
    "python-dotenv>=1,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.4,<1",
]

[project.scripts]
magpie = "magpie.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["magpie"]

[tool.hatch.version]
path = "magpie/__version__.py"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
